display NPS as percentages also: align datatables right, add a little padding have hottest calculate unsubscribes correctly

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -101,3 +101,9 @@
   white-space: pre;
   font-family: monospace;
 }
+
+.dataTable td.data {
+  text-align: right;
+}
+
+.dataTable td { padding: 3px; }
